# tetris

./: .gitignore  CMakeLists.txt  README.md
include/: tetrishead.hpp
sources/: main.cpp
sources/libtetris/: brick.cpp  gamer.cpp  init_colors.cpp  koords.cpp  move_at.cpp  other_fun.cpp  tetris.cpp  threads.cpp
